@@ -1,3 +1,8 @@
+2011-03-30  Alexey Shvetsov <alexxy@gentoo.org>
+
+	* util/grub.d/10_linux.in: Add gentoo-specific config filename.
+	* util/grub.d/20_linux_xen.in: Likewise.
+
 2011-03-30  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* util/grub.d/10_linux.in: Try alternative config filenames where
